# demotivator-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
src/: main.py  settings.py
src/bot/: __init__.py
src/bot/filters/: __init__.py  user_check_filter.py
src/bot/middlewares/: __init__.py  common.py
src/bot/routers/: __init__.py  common.py  media.py
src/utils/: __init__.py  demotivator_creator.py
